<?xml version="1.0"?>
<package>
  <name>gazebo_ros_control_test</name>
  <version>0.0.0</version>
  <description>The gazebo_ros_control_test package</description>
  <maintainer email="johannes@intermodalics.eu">johannes</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>gazebo_ros_control</build_depend>
  <build_depend>controller_interface</build_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>controller_interface</run_depend>
  <run_depend>controller_manager</run_depend>

  <export>
    <gazebo_ros_control plugin="${prefix}/robot_hw_sim_plugins.xml"/>
    <gazebo_ros gazebo_model_path="${prefix}/model"/>
    <controller_interface plugin="${prefix}/ros_control_plugins.xml"/>
  </export>

</package>
